--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -136,7 +136,7 @@
   metadata: &14
     title_ru: Токийский гуль
     title_en: Tokyo Ghoul
-    image: 
+    image: https://kawai.shikimori.org/system/user_images/original/34807/624136.jpg
     topic_id: 247360
 - neko_id: tokyo_ghoul
   level: 0
@@ -983,7 +983,7 @@
   metadata: &104
     title_ru: Проект Кей
     title_en: K
-    image: 
+    image: https://nyaa.shikimori.org/system/user_images/original/29386/688555.jpg
     topic_id: 247360
 - neko_id: k
   level: 0
@@ -1708,6 +1708,9 @@
   algo: duration
   filters: &182
     franchise: hibike_euphonium
+    not_anime_ids:
+    - 31989
+    - 35082
   threshold: 94.7%
   metadata: &183
     title_ru: Звучи, эуфониум!
@@ -1947,7 +1950,7 @@
   metadata: &207
     title_ru: Собачьи дни
     title_en: Dog Days
-    image: 
+    image: https://moe.shikimori.org/system/user_images/original/3824/688642.jpg
     topic_id: 247360
 - neko_id: dog_days
   level: 0
@@ -2433,6 +2436,7 @@
     franchise: tiger_bunny
     not_anime_ids:
     - 30178
+    - 12015
   threshold: 98%
   metadata: &262
     title_ru: Тигр и кролик
@@ -2825,8 +2829,8 @@
     franchise: ranma
   threshold: 95%
   metadata: &304
-    title_ru: Ранма 1/2
-    title_en: Ranma 1/2
+    title_ru: Ранма ½
+    title_en: Ranma ½
     image: "/assets/achievements/anime/franchise/ranma.jpg"
     topic_id: 247360
 - neko_id: ranma
