--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1145,7 +1145,7 @@
   metadata: &122
     title_ru: Утраченное небесами
     title_en: Sora no Otoshimono
-    image: 
+    image: https://dere.shikimori.org/system/user_images/original/34807/688774.jpg
     topic_id: 247360
 - neko_id: sora_no_otoshimono
   level: 0
@@ -1274,7 +1274,7 @@
   metadata: &135
     title_ru: Сказание о демонах сакуры
     title_en: Hakuouki
-    image: 
+    image: https://nyaa.shikimori.org/system/user_images/original/34807/688770.jpg
     topic_id: 247360
 - neko_id: hakuouki
   level: 0
@@ -2060,7 +2060,7 @@
   metadata: &219
     title_ru: Маленькие проказники!
     title_en: Little Busters!
-    image: 
+    image: https://nyaa.shikimori.org/system/user_images/original/34807/688765.jpg
     topic_id: 247360
 - neko_id: little_busters
   level: 0
@@ -2384,7 +2384,7 @@
   metadata: &256
     title_ru: Золотая струна
     title_en: Kiniro no Corda
-    image: 
+    image: https://kawai.shikimori.org/system/user_images/original/34807/688761.jpg
     topic_id: 247360
 - neko_id: kiniro_no_corda
   level: 0
@@ -2813,7 +2813,7 @@
   metadata: &302
     title_ru: Красавцы из клуба защитников Земли
     title_en: Binan Koukou Chikyuu Boueibu LOVE!
-    image: 
+    image: https://moe.shikimori.org/system/user_images/original/34807/688757.jpg
     topic_id: 247360
 - neko_id: binan_koukou_chikyuu_boueibu_love
   level: 0
@@ -3100,7 +3100,7 @@
   metadata: &334
     title_ru: Тамаюра
     title_en: Tamayura
-    image: 
+    image: https://dere.shikimori.org/system/user_images/original/34807/688754.jpg
     topic_id: 247360
 - neko_id: tamayura
   level: 0
