--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -172,11 +172,16 @@
     franchise: science_adventure
     not_anime_ids:
     - 34753
+    - 4975
+    - 13599
+    - 32962
+    - 30485
+    - 35315
   threshold: 95%
   metadata: &18
     title_ru: Врата Штейна
     title_en: Steins;Gate
-    image: 
+    image: https://desu.shikimori.org/system/user_images/original/223136/688908.jpg
     topic_id: 247360
 - neko_id: science_adventure
   level: 0
@@ -327,7 +332,7 @@
   metadata: &33
     title_ru: Повелитель
     title_en: Overlord
-    image: 
+    image: https://kawai.shikimori.org/system/user_images/original/223136/688906.jpg
     topic_id: 247360
 - neko_id: overlord
   level: 0
@@ -344,7 +349,7 @@
   metadata: &35
     title_ru: Синий экзорцист
     title_en: Ao no Exorcist
-    image: 
+    image: https://moe.shikimori.org/system/user_images/original/223136/688907.jpg
     topic_id: 247360
 - neko_id: ao_no_exorcist
   level: 0
@@ -1889,7 +1894,7 @@
   metadata: &201
     title_ru: Бакуган
     title_en: Bakugan
-    image: 
+    image: https://dere.shikimori.org/system/user_images/original/50587/688939.jpg
     topic_id: 247360
 - neko_id: baku_tech_bakugan
   level: 0
