--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -682,7 +682,7 @@
   metadata: &70
     title_ru: Блич
     title_en: Bleach
-    image: https://dere.shikimori.org/system/user_images/original/29386/689394.jpg
+    image: "/assets/achievements/anime/franchise/bleach.jpg"
     topic_id: 247360
 - neko_id: bleach
   level: 0
@@ -701,7 +701,7 @@
   metadata: &72
     title_ru: Граница пустоты
     title_en: Kara no Kyoukai
-    image: https://desu.shikimori.org/system/user_images/original/29386/689398.jpg
+    image: "/assets/achievements/anime/franchise/kara_no_kyoukai.jpg"
     topic_id: 247360
 - neko_id: kara_no_kyoukai
   level: 0
@@ -885,7 +885,7 @@
   metadata: &93
     title_ru: Когда плачут цикады
     title_en: Higurashi no Naku Koro ni
-    image: https://dere.shikimori.org/system/user_images/original/12671/689439.jpg
+    image: "/assets/achievements/anime/franchise/when_they_cry.jpg"
     topic_id: 247360
 - neko_id: when_they_cry
   level: 0
@@ -902,7 +902,7 @@
   metadata: &95
     title_ru: Маги
     title_en: Magi
-    image: https://nyaa.shikimori.org/system/user_images/original/29386/689400.jpg
+    image: "/assets/achievements/anime/franchise/magi.jpg"
     topic_id: 247360
 - neko_id: magi
   level: 0
@@ -1112,7 +1112,7 @@
   metadata: &117
     title_ru: Красавица-воин Сейлор Мун
     title_en: Bishoujo Senshi Sailor Moon
-    image: https://kawai.shikimori.org/system/user_images/original/12671/689421.jpg
+    image: "/assets/achievements/anime/franchise/sailor_moon.jpg"
     topic_id: 247360
   generator: &118
     not_ignored_ids:
@@ -1500,7 +1500,7 @@
   metadata: &159
     title_ru: Нодамэ Кантабиле
     title_en: Nodame Cantabile
-    image: https://kawai.shikimori.org/system/user_images/original/29386/688966.jpg
+    image: "/assets/achievements/anime/franchise/nodame_cantabile.jpg"
     topic_id: 247360
 - neko_id: nodame_cantabile
   level: 0
@@ -1815,7 +1815,7 @@
   metadata: &193
     title_ru: Волшебный учитель Нэгима!
     title_en: Mahou Sensei Negima!
-    image: https://kawai.shikimori.org/system/user_images/original/29386/689401.jpg
+    image: "/assets/achievements/anime/franchise/negima.jpg"
     topic_id: 247360
 - neko_id: negima
   level: 0
@@ -2445,7 +2445,7 @@
   metadata: &262
     title_ru: Тигр и кролик
     title_en: Tiger & Bunny
-    image: https://moe.shikimori.org/system/user_images/original/29386/689402.jpg
+    image: "/assets/achievements/anime/franchise/tiger_bunny.jpg"
     topic_id: 247360
 - neko_id: tiger_bunny
   level: 0
@@ -2524,7 +2524,7 @@
   metadata: &270
     title_ru: Лиричная волшебница Наноха
     title_en: Mahou Shoujo Lyrical Nanoha
-    image: https://dere.shikimori.org/system/user_images/original/29386/689404.jpg
+    image: "/assets/achievements/anime/franchise/mahou_shoujo_lyrical_nanoha.jpg"
     topic_id: 247360
 - neko_id: mahou_shoujo_lyrical_nanoha
   level: 0
@@ -2541,7 +2541,7 @@
   metadata: &272
     title_ru: Клинок королевы
     title_en: Queen's Blade
-    image: https://nyaa.shikimori.org/system/user_images/original/29386/689405.jpg
+    image: "/assets/achievements/anime/franchise/queen_s_blade.jpg"
     topic_id: 247360
 - neko_id: queen_s_blade
   level: 0
@@ -2708,7 +2708,7 @@
   metadata: &290
     title_ru: Замахнись сильнее
     title_en: Ookiku Furikabutte
-    image: https://kawai.shikimori.org/system/user_images/thumbnail/188354/688436.jpg
+    image: "/assets/achievements/anime/franchise/ookiku_furikabutte.jpg"
     topic_id: 247360
 - neko_id: ookiku_furikabutte
   level: 0
@@ -2762,7 +2762,7 @@
   metadata: &296
     title_ru: Песня боевых принцесс
     title_en: Senki Zesshou Symphogear
-    image: https://kawai.shikimori.org/system/user_images/original/29386/689406.jpg
+    image: "/assets/achievements/anime/franchise/senki_zesshou_symphogear.jpg"
     topic_id: 247360
 - neko_id: senki_zesshou_symphogear
   level: 0
@@ -3175,7 +3175,7 @@
   metadata: &342
     title_ru: Бейблэйд
     title_en: Beyblade
-    image: https://dere.shikimori.org/system/user_images/original/34807/689289.jpg
+    image: "/assets/achievements/anime/franchise/beyblade.jpg"
     topic_id: 247360
 - neko_id: beyblade
   level: 0
