--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -332,7 +332,7 @@
   metadata: &33
     title_ru: Повелитель
     title_en: Overlord
-    image: "/assets/achievements/anime/franchise/overlord.jpg"
+    image: https://kawai.shikimori.org/system/user_images/original/34807/690036.jpg
     topic_id: 247360
 - neko_id: overlord
   level: 0
@@ -2672,7 +2672,7 @@
   metadata: &286
     title_ru: Приключения Дигимонов
     title_en: Digimon Adventure
-    image: "/assets/achievements/anime/franchise/digimon.jpg"
+    image: https://nyaa.shikimori.org/system/user_images/original/34807/690030.jpg
     topic_id: 247360
 - neko_id: digimon
   level: 0
