--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1045,7 +1045,7 @@
   metadata: &110
     title_ru: Охотник х Охотник
     title_en: Hunter x Hunter
-    image: https://moe.shikimori.org/system/user_images/original/34807/690057.jpg
+    image: "/assets/achievements/anime/franchise/hunter_x_hunter.jpg"
     topic_id: 247360
 - neko_id: hunter_x_hunter
   level: 0
@@ -2328,7 +2328,7 @@
   metadata: &248
     title_ru: Путь аса
     title_en: Diamond no Ace
-    image: https://dere.shikimori.org/system/user_images/original/34807/690059.jpg
+    image: "/assets/achievements/anime/franchise/diamond_no_ace.jpg"
     topic_id: 247360
 - neko_id: diamond_no_ace
   level: 0
@@ -3309,7 +3309,7 @@
   metadata: &356
     title_ru: Капризы Апельсиновой улицы
     title_en: Kimagure Orange☆Road
-    image: https://nyaa.shikimori.org/system/user_images/original/84020/690065.jpg
+    image: "/assets/achievements/anime/franchise/kimagure_orange_road.jpg"
     topic_id: 247360
 - neko_id: kimagure_orange_road
   level: 0
@@ -3634,11 +3634,17 @@
 - neko_id: chihayafuru
   level: 1
   algo: duration
-  filters: &391
+  filters: &393
     franchise: chihayafuru
   threshold: 100%
-  metadata: &392
+  metadata: &394
     title_ru: Яркая Чихая
     title_en: Chihayafuru
-    image: https://moe.shikimori.org/system/user_images/original/34807/624172.jpg
+    image: "/assets/achievements/anime/franchise/chihayafuru.jpg"
     topic_id: 247360
+- neko_id: chihayafuru
+  level: 0
+  algo: duration
+  filters: *393
+  threshold: 0.01%
+  metadata: *394
