--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1168,21 +1168,21 @@
   filters: &123
     franchise: gundam
     not_anime_ids:
+    - 3626
     - 3963
     - 3964
     - 5351
     - 6215
     - 7953
     - 8839
+    - 17655
     - 22435
     - 23943
     - 32898
-    - 3626
-    - 35949
     - 33221
-    - 17655
+    - 35949
     - 36436
-  threshold: 85.9%
+  threshold: 86.3%
   metadata: &124
     title_ru: Мобильный воин Гандам
     title_en: Mobile Suit Gundam
@@ -1866,7 +1866,7 @@
   metadata: &197
     title_ru: Тэнти — лишний!
     title_en: Tenchi Muyou!
-    image: https://dere.shikimori.org/system/user_images/original/84020/691084.jpg
+    image: "/assets/achievements/anime/franchise/tenchi_muyou.jpg"
     topic_id: 247360
 - neko_id: tenchi_muyou
   level: 0
@@ -2454,7 +2454,7 @@
   metadata: &262
     title_ru: Ария
     title_en: Aria
-    image: https://kawai.shikimori.org/system/user_images/original/29386/690466.jpg
+    image: "/assets/achievements/anime/franchise/aria.jpg"
     topic_id: 247360
 - neko_id: aria
   level: 0
