--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -133,6 +133,8 @@
   algo: duration
   filters: &14
     franchise: ao_no_exorcist
+    not_anime_ids:
+    - 13677
   threshold: 96.5%
   metadata: &15
     title_ru: Синий экзорцист
@@ -400,6 +402,8 @@
   algo: duration
   filters: &40
     franchise: chuunibyou_demo_koi_ga_shitai
+    not_anime_ids:
+    - 36855
   threshold: 87.6%
   metadata: &41
     title_ru: Чудачества любви не помеха!
@@ -457,6 +461,8 @@
     - 32311
     - 34085
     - 38055
+    - 32739
+    - 31115
   threshold: 93.2%
   metadata: &47
     title_ru: Евангелион
@@ -567,6 +573,8 @@
   algo: duration
   filters: &59
     franchise: hellsing
+    not_anime_ids:
+    - 6904
   threshold: 96.1%
   metadata: &60
     title_ru: Хеллсинг
@@ -1659,6 +1667,10 @@
     title_en: Uta no☆Prince-sama♪
     image: "/assets/achievements/anime/franchise/uta_no_prince_sama.jpg"
     topic_id: 247360
+  generator:
+    not_ignored_ids:
+    - 36684
+    - 36685
 - neko_id: uta_no_prince_sama
   level: 0
   algo: duration
@@ -1695,6 +1707,9 @@
     title_en: Nodame Cantabile
     image: "/assets/achievements/anime/franchise/nodame_cantabile.jpg"
     topic_id: 247360
+  generator:
+    not_ignored_ids:
+    - 5656
 - neko_id: nodame_cantabile
   level: 0
   algo: duration
@@ -2091,6 +2106,13 @@
     not_anime_ids:
     - 6733
     - 9344
+    - 28733
+    - 30483
+    - 7285
+    - 12163
+    - 30481
+    - 29716
+    - 10118
   threshold: 90%
   metadata: &221
     title_ru: Галактический экспресс 999
@@ -3342,23 +3364,6 @@
   filters: *357
   threshold: 0.01%
   metadata: *358
-- neko_id: muumin
-  level: 1
-  algo: duration
-  filters: &359
-    franchise: muumin
-  threshold: 98.6%
-  metadata: &360
-    title_ru: Муми-тролль
-    title_en: Muumin
-    image: "/assets/achievements/anime/franchise/muumin.jpg"
-    topic_id: 247360
-- neko_id: muumin
-  level: 0
-  algo: duration
-  filters: *359
-  threshold: 0.01%
-  metadata: *360
 - neko_id: mazinkaiser
   level: 1
   algo: duration
@@ -3494,6 +3499,8 @@
   algo: duration
   filters: &375
     franchise: to_heart
+    not_anime_ids:
+    - 1624
   threshold: 94.4%
   metadata: &376
     title_ru: Для сердца
