--- a/priv/rules/romance.yml
+++ b/priv/rules/romance.yml
@@ -17,7 +17,7 @@
   level: 2
   threshold: 110
   metadata:
-    title_ru: Первое признание в любви.
+    title_ru: Первое признание в любви
     text_ru: Если ты не признаешься, она никогда не узнает о твоих чувствах.
     image: /assets/achievements/anime/romance_2.jpg
     border_color: "#DC143C"
